feat : product (admin)

--- a/Frontend/src/app/core/layout/app-layout/app-layout.component.html
+++ b/Frontend/src/app/core/layout/app-layout/app-layout.component.html
@@ -19,12 +19,12 @@
           <div
             class="flex items-center justify-center size-8 min-w-8 rounded-lg bg-zinc-900 text-white font-bold text-sm select-none shrink-0"
           >
-            C
+            F
           </div>
           <span
             class="text-sm font-semibold text-zinc-900 tracking-tight whitespace-nowrap overflow-hidden text-ellipsis"
           >
-            CRM Dashboard
+            Food Retail
           </span>
         </div>
       }
